[package]
name = "grades"
version = "0.1.0"
authors = ["Lukáš Hozda <luk.hozda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled  = "0.30"
serde = "1"
lazy_static = "1.4"
serde_cbor = "0.10"
rocket = "0.4.2"

[dependencies.uuid]
version = "0.8.1"
features = ["serde"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

