[package]
name = "grades"
version = "0.1.0"
authors = ["Lukáš Hozda <luk.hozda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled  = "0.30"
serde = "1"
lazy_static = "1.4"
serde_cbor = "0.10"
serde_json = "1.0"
rocket = "0.4.2"
dotenv = "0.15"
reqwest = "0.10"

[dependencies.rejwt]
path = "rejwt"

[dependencies.uuid]
version = "0.8.1"
features = ["serde", "v4"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.rocket_contrib]
version = "0.4.2"
features = ["json"]
